[tool.poetry]
name = "dynatalk"
version = "0.5.0"
description = ""
authors = ["wwj718 <wuwenjie718@gmail.com>"]
readme = "README.md"
packages = [{include = "dynatalk"}]

[tool.poetry.dependencies]
python = "^3.8"
paho-mqtt = "^1.6.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"