[tool.poetry]
name = "dynatalk"
version = "0.7.2"
description = ""
authors = ["wwj718 <wuwenjie718@gmail.com>"]
readme = "README.md"
packages = [{include = "dynatalk"}]

[tool.poetry.dependencies]
python = "^3.8"
paho-mqtt = "^1.6.1"
amqtt = "^0.11.0b1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dynatalk-monitor = 'dynatalk.cli_monitor:monitor'
dynatalk-hub = 'dynatalk.broker:main'